# llm_demo

./: .example.env  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
brief/: apps.py  urls.py  validators.py  views.py
brief/services/: llm.py
brief/static/css/: style.css
brief/static/js/: app.js
brief/templates/: index.html
collabstr_ai/: asgi.py  settings.py  urls.py  wsgi.py
